--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="ITOSHIRO ZUNA LLC — research‑led publishing, interactive apps, and patent‑pending science at the intersection of technology and consciousness." />
   <title>ITOSHIRO ZUNA LLC — Company Profile</title>
-  <link rel="icon" href="/assets/favicon.ico" />
+  <link rel="icon" href="assets/favicon.ico" />
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -121,8 +121,8 @@
         <div class="rounded-lg bg-slate-800/70 border border-slate-700 p-6">
           <h3 class="text-xl font-semibold mb-2">Snapshot (Today)</h3>
           <ul class="list-disc pl-5 text-slate-300 space-y-2">
-            <li><strong>Patent‑pending:</strong> filed application in bio‑signal analytics (status: pending).</li>
-            <li><strong>Publishing:</strong> 8 books released across print, digital, and audio.</li>
+            <li><strong>Patent‑pending (2):</strong> (1) a method/software for HRV (bio‑signal) analysis; (2) a composite material engineered for durability with electrical/EMI‑shielding and antimicrobial properties.</li>
+            <li><strong>Publishing:</strong> 8 books in <em>digital and print</em> formats.</li>
             <li><strong>Apps:</strong> interactive prototypes for research, meditation, education, and gameplay (see Apps menu).</li>
           </ul>
         </div>
@@ -136,7 +136,7 @@
     <div class="grid sm:grid-cols-2 gap-8 max-w-5xl mx-auto">
       <!-- Fractal Symphony -->
       <article class="bg-slate-800/70 p-4 rounded-lg shadow hover:shadow-amber-400/30 transition">
-        <img src="/assets/books/fractal-symphony-of-time.jpg" alt="Cover — The Fractal Symphony of Time" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+        <img src="assets/images/fractal-symphony-of-time.jpg" alt="Cover — The Fractal Symphony of Time" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h3 class="text-xl font-semibold mb-1">The Fractal Symphony of Time</h3>
         <p class="text-sm text-slate-300 mb-3">Metaphysical exploration of time and consciousness.</p>
         <a href="https://a.co/d/ct5lST4" target="_blank" rel="noopener" class="inline-block px-4 py-2 bg-amber-400 text-slate-900 rounded font-semibold">Buy on Amazon</a>
@@ -144,7 +144,7 @@
 
       <!-- When Realms Bleed -->
       <article class="bg-slate-800/70 p-4 rounded-lg shadow hover:shadow-amber-400/30 transition">
-        <img src="/assets/books/when-realms-bleed.jpg" alt="Cover — When Realms Bleed: The World As I See It" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+        <img src="assets/images/when-realms-bleed.jpg" alt="Cover — When Realms Bleed: The World As I See It" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h3 class="text-xl font-semibold mb-1">When Realms Bleed: The World As I See It</h3>
         <p class="text-sm text-slate-300 mb-3">Book 1 of a sci‑fi journey through nine realms.</p>
         <a href="https://a.co/d/ijwoPSi" target="_blank" rel="noopener" class="inline-block px-4 py-2 bg-amber-400 text-slate-900 rounded font-semibold">Buy on Amazon</a>
