--- a/books.html
+++ b/books.html
@@ -5,15 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Books | Itoshiro Zuna LLC</title>
   <meta name="description" content="Explore the published works of Itoshiro Zuna – metaphysics, spirituality, and science‑inspired fiction." />
-  <link rel="icon" href="/assets/favicon.ico" />
+  <link rel="icon" href="assets/favicon.ico" />
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    #bgCanvas{position:fixed;inset:0;z-index:-1}
-  </style>
+  <style>#bgCanvas{position:fixed;inset:0;z-index:-1}</style>
 </head>
 <body class="bg-[#0a0a23] text-gray-200 min-h-screen flex flex-col font-sans">
-  <!-- Header (same nav, Books active) -->
+  <!-- Header -->
   <header class="sticky top-0 z-50 w-full bg-black/80 backdrop-blur border-b border-slate-800">
     <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3">
       <a href="index.html#home" class="text-xl font-semibold text-yellow-400 drop-shadow">ITOSHIRO ZUNA</a>
@@ -21,7 +19,6 @@
         <a href="index.html#home" class="hover:text-yellow-400">Home</a>
         <a href="index.html#about" class="hover:text-yellow-400">About</a>
         <a href="books.html" class="text-yellow-400 font-bold">Books</a>
-        <!-- Simple links back to index for Apps/Research/Social -->
         <a href="index.html#apps" class="hover:text-yellow-400">Apps</a>
         <a href="index.html#research" class="hover:text-yellow-400">Research</a>
         <a href="index.html#social" class="hover:text-yellow-400">Social</a>
@@ -54,7 +51,7 @@
     <div class="max-w-7xl mx-auto grid gap-10 sm:grid-cols-2 lg:grid-cols-3">
       <!-- The Fractal Symphony of Time -->
       <article class="bg-black/60 rounded-2xl p-6 shadow-lg shadow-yellow-400/10 hover:shadow-yellow-400/30 transition">
-        <img src="/assets/books/fractal-symphony-of-time.jpg" alt="Cover — The Fractal Symphony of Time" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+        <img src="assets/images/fractal-symphony-of-time.jpg" alt="Cover — The Fractal Symphony of Time" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h2 class="text-xl font-semibold text-yellow-300 mb-2">The Fractal Symphony of Time</h2>
         <p class="text-sm mb-4">A Journey Through Dimensions, Imagination, and Creation</p>
         <a href="https://a.co/d/ct5lST4" target="_blank" class="inline-flex items-center justify-center bg-yellow-400 text-black font-semibold px-4 py-2 rounded-md hover:bg-yellow-300 transition">Buy on Amazon</a>
@@ -62,7 +59,7 @@
 
       <!-- When Realms Bleed -->
       <article class="bg-black/60 rounded-2xl p-6 shadow-lg shadow-yellow-400/10 hover:shadow-yellow-400/30 transition">
-        <img src="/assets/books/when-realms-bleed.jpg" alt="Cover — When Realms Bleed: The World As I See It" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+        <img src="assets/images/when-realms-bleed.jpg" alt="Cover — When Realms Bleed: The World As I See It" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h2 class="text-xl font-semibold text-yellow-300 mb-2">When Realms Bleed: The World As I See It</h2>
         <p class="text-sm mb-4">Book 1 of the upcoming trilogy journey into nine realms.</p>
         <a href="https://a.co/d/ijwoPSi" target="_blank" class="inline-flex items-center justify-center bg-yellow-400 text-black font-semibold px-4 py-2 rounded-md hover:bg-yellow-300 transition">Buy on Amazon</a>
@@ -70,7 +67,7 @@
 
       <!-- In the Image of God -->
       <article class="bg-black/60 rounded-2xl p-6 shadow-lg shadow-yellow-400/10 hover:shadow-yellow-400/30 transition">
-        <img src="/assets/books/in-the-image-of-god.jpg" alt="Cover — In the Image of God" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+        <img src="assets/images/in-the-image-of-god.jpg" alt="Cover — In the Image of God" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h2 class="text-xl font-semibold text-yellow-300 mb-2">In the Image of God</h2>
         <p class="text-sm mb-4">The Fractal Mirror of Creation</p>
         <a href="https://a.co/d/hFYire8" target="_blank" class="inline-flex items-center justify-center bg-yellow-400 text-black font-semibold px-4 py-2 rounded-md hover:bg-yellow-300 transition">Buy on Amazon</a>
@@ -78,7 +75,7 @@
 
       <!-- The Spiritual Energy -->
       <article class="bg-black/60 rounded-2xl p-6 shadow-lg shadow-yellow-400/10 hover:shadow-yellow-400/30 transition">
-        <img src="/assets/books/the-spiritual-energy.jpg" alt="Cover — The Spiritual Energy" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+        <img src="assets/images/the-spiritual-energy.jpg" alt="Cover — The Spiritual Energy" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h2 class="text-xl font-semibold text-yellow-300 mb-2">The Spiritual Energy</h2>
         <p class="text-sm mb-4">A Path to Our Soul</p>
         <a href="https://a.co/d/bejn1PV" target="_blank" class="inline-flex items-center justify-center bg-yellow-400 text-black font-semibold px-4 py-2 rounded-md hover:bg-yellow-300 transition">Buy on Amazon</a>
@@ -86,7 +83,7 @@
 
       <!-- The Inner Alchemy of Emotion -->
       <article class="bg-black/60 rounded-2xl p-6 shadow-lg shadow-yellow-400/10 hover:shadow-yellow-400/30 transition">
-        <img src="/assets/books/inner-alchemy-of-emotion.jpg" alt="Cover — The Inner Alchemy of Emotion" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+        <img src="assets/images/inner-alchemy-of-emotion.jpg" alt="Cover — The Inner Alchemy of Emotion" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h2 class="text-xl font-semibold text-yellow-300 mb-2">The Inner Alchemy of Emotion</h2>
         <p class="text-sm mb-4">The Soul’s Path to Transmutation</p>
         <a href="https://a.co/d/73qsznL" target="_blank" class="inline-flex items-center justify-center bg-yellow-400 text-black font-semibold px-4 py-2 rounded-md hover:bg-yellow-300 transition">Buy on Amazon</a>
@@ -94,7 +91,7 @@
 
       <!-- The Astral Enigma -->
       <article class="bg-black/60 rounded-2xl p-6 shadow-lg shadow-yellow-400/10 hover:shadow-yellow-400/30 transition">
-        <img src="/assets/books/the-astral-enigma.jpg" alt="Cover — The Astral Enigma" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
+        <img src="assets/images/the-astral-enigma.jpg" alt="Cover — The Astral Enigma" class="rounded mb-4 mx-auto w-48 h-64 object-cover" />
         <h2 class="text-xl font-semibold text-yellow-300 mb-2">The Astral Enigma</h2>
         <p class="text-sm mb-4">Imagination, Truth, and the Beyond</p>
         <a href="https://a.co/d/fSJJinz" target="_blank" class="inline-flex items-center justify-center bg-yellow-400 text-black font-semibold px-4 py-2 rounded-md hover:bg-yellow-300 transition">Buy on Amazon</a>
@@ -107,7 +104,7 @@
     <p>© 2025 Itoshiro Zuna LLC. All rights reserved.</p>
   </footer>
 
-  <!-- Background fractal (optional, matches index) -->
+  <!-- Background fractal -->
   <canvas id="bgCanvas" aria-hidden="true"></canvas>
   <script>
     // Mobile menu toggle
