--- a/books.html
+++ b/books.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Books | Itoshiro Zuna LLC</title>
+  <title>Books | Itoshiro Zuna</title>
   <meta name="description" content="Explore the published works of Itoshiro Zuna – metaphysics, spirituality, and science‑inspired fiction." />
   <link rel="icon" href="assets/favicon.ico" />
   <!-- Tailwind CSS -->
@@ -14,7 +14,7 @@
   <!-- Header -->
   <header class="sticky top-0 z-50 w-full bg-black/80 backdrop-blur border-b border-slate-800">
     <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3">
-      <a href="index.html#home" class="text-xl font-semibold text-yellow-400 drop-shadow">ITOSHIRO ZUNA</a>
+      <a href="index.html#home" class="text-xl font-semibold text-yellow-400 drop-shadow">ITOSHIRO ZUNA LLC</a>
       <nav class="space-x-6 hidden md:block">
         <a href="index.html#home" class="hover:text-yellow-400">Home</a>
         <a href="index.html#about" class="hover:text-yellow-400">About</a>
