--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <h2 class="text-3xl font-bold text-amber-400 text-center mb-10">Apps & Interactive</h2>
     <div class="max-w-6xl mx-auto grid lg:grid-cols-3 gap-8">
       <div class="bg-slate-800/60 p-6 rounded-lg">
-        <h3 class="text-xl font-semibold mb-1">KAI‑WAVE™ Companion</h3>
+        <h3 class="text-xl font-semibold mb-1">HRV Companion</h3>
         <p class="text-slate-300 mb-3">Non‑regulated HRV insights & recovery coaching. Prototype in Year 2.</p>
         <a href="#research-contact" class="text-amber-400 hover:underline">Join waitlist →</a>
       </div>
